# matha-lib

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_matha.py
matha/: __init__.py  algebra.py  basic.py  calculas.py  complex.py  constants.py  geometry.py  graph.py  linalg.py  machine_learning.py  numTheory.py  regression.py  solvers.py  sort.py  special_functions.py  stats.py  trigonometry.py  vector.py
