[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matha-lib"
version = "1.2.0"
authors = [
  { name="AstroJr0" },
]
description = "A universal math library for Python: Math All Utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools]
# Force setuptools to only package the 'matha' code folder
packages = ["matha"]

[project.urls]
"Homepage" = "https://github.com/uvz0/matha-lib"
"Bug Tracker" = "https://github.com/uvz0/matha-lib/issues"
